RESOLVED FIXED187074
eval() is wrong about the LiteralParser never throwing any exceptions.
https://bugs.webkit.org/show_bug.cgi?id=187074
Summary eval() is wrong about the LiteralParser never throwing any exceptions.
Mark Lam
Reported 2018-06-26 17:49:57 PDT
The LiteralParser may have thrown a StackOverflowError or OutOfMemoryError too. <rdar://problem/41461099>
Attachments
proposed patch. (2.89 KB, patch)
2018-06-26 17:59 PDT, Mark Lam
no flags
Mark Lam
Comment 1 2018-06-26 17:59:32 PDT
Created attachment 343667 [details] proposed patch.
Saam Barati
Comment 2 2018-06-26 18:11:52 PDT
r=me
Mark Lam
Comment 3 2018-06-26 19:42:32 PDT
Comment on attachment 343667 [details] proposed patch. Thanks for the review. Landing now.
WebKit Commit Bot
Comment 4 2018-06-26 20:10:23 PDT
Comment on attachment 343667 [details] proposed patch. Clearing flags on attachment: 343667 Committed r233242: <https://trac.webkit.org/changeset/233242>
WebKit Commit Bot
Comment 5 2018-06-26 20:10:25 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-06-26 20:13:58 PDT
Mark Lam
Comment 7 2018-06-26 20:47:58 PDT
Note You need to log in before you can comment on or make changes to this bug.