eval() is wrong about the LiteralParser never throwing any exceptions. https://bugs.webkit.org/show_bug.cgi?id=187074 <rdar://problem/41461099>

Reviewed by Saam Barati.

JSTests:

* stress/regress-187074.js: Added.

Source/JavaScriptCore:

Added the missing exception check, and removed an erroneous assertion.

* interpreter/Interpreter.cpp:
(JSC::eval):


Canonical link: https://commits.webkit.org/202331@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233242 268f45cc-cd09-0410-ab3c-d52691b4dbfc